--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -83,19 +83,25 @@
         <span class="visually-hidden">Next</span>
       </button>
     </section>
-
-    <section class="intro py-5">
+    <section class="about py-5">
       <div class="container">
         <div class="row">
           <div class="col-md-8 mx-auto">
             <p class="text-center border border-1 mb-0">
-              Welcome to Vanavihari, where Community Based Eco-Tourism (CBET) thrives under the ownership of the Andhra Pradesh Forest Department. Our retreats are lovingly managed by local tribal communities, offering them not just employment but also a deep sense of belonging and pride. A portion of the proceeds from our resorts goes directly to the tribal members, ensuring sustainable livelihoods and security. With the Konda Reddy and Valmiki tribes at the heart of our endeavors, Vanavihari boasts two remarkable retreats: one nestled in Maredumilli and the other, Jungle Star Eco Camp, situated in Valammuru. We extend our heartfelt thanks to the diligent efforts of our DFO and Range Officers, who tirelessly safeguard both the forest and the well-being of our community. Welcome to a journey of nature, culture, and responsible tourism at Vanavihari.
+              Welcome to Vanavihari, where Community Based Eco-Tourism (CBET) thrives under the ownership of the Andhra
+              Pradesh Forest Department. Our retreats are lovingly managed by local tribal communities, offering them
+              not just employment but also a deep sense of belonging and pride. A portion of the proceeds from our
+              resorts goes directly to the tribal members, ensuring sustainable livelihoods and security. With the Konda
+              Reddy and Valmiki tribes at the heart of our endeavors, Vanavihari boasts two remarkable retreats: one
+              nestled in Maredumilli and the other, Jungle Star Eco Camp, situated in Valammuru. We extend our heartfelt
+              thanks to the diligent efforts of our DFO and Range Officers, who tirelessly safeguard both the forest and
+              the well-being of our community. Welcome to a journey of nature, culture, and responsible tourism at
+              Vanavihari.
             </p>
           </div>
         </div>
       </div>
     </section>
-    
     <section class="search-rooms py-5">
       <div class="container">
         <h2 class="text-center mb-4">Search room availability</h2>
@@ -183,7 +189,6 @@
                         </div>
                       </div>
                     </div>
-
                     <div class="modal-footer">
                       <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
                         Done
@@ -212,6 +217,7 @@
     </section>
     <section class="resort-intro py-5">
       <div class="container">
+        <h1 class="text-center mb-4">Our Resorts</h1>
         <div class="row justify-content-around">
           <div class="col-md-4">
             <div class="card" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2)">
@@ -219,8 +225,14 @@
               <div class="card-body text-center">
                 <h5 class="card-title">Vanavihari, Maredumilli</h5>
                 <p class="card-text">
-                  Vanavihari resort, nestled in Maredumilli, is a haven for eco-tourism enthusiasts with its bamboo-filled surroundings. This community-centric guesthouse offers a peaceful escape amidst nature, providing cozy cottages and easy access to street food restaurants offering bamboo biriyani. A stroll outside reveals a heavenly experience.
+                  Vanavihari resort, nestled in Maredumilli, is a haven for eco-tourism enthusiasts with its
+                  bamboo-filled surroundings. This community-centric guesthouse offers a peaceful escape amidst nature,
+                  providing cozy cottages and easy access to street food restaurants offering bamboo biriyani. A stroll
+                  outside reveals a heavenly experience.
                 </p>
+              </div>
+              <div class="card-footer d-flex justify-content-center bg-transparent">
+                <button mat-raised-button color="primary">View details</button>
               </div>
             </div>
           </div>
@@ -230,63 +242,73 @@
               <div class="card-body text-center">
                 <h5 class="card-title">Jungle Star, Valamuru</h5>
                 <p class="card-text">
-                  Jungle Star Eco Camp offers a unique island-like setting with seven cottages perched on a hillock, accessed only by a bridge. Crossing the hanging bridge is thrilling as it sways over the flowing river below. Surrounded by towering mountains, the camp provides stunning views. Managed by the Andhra Pradesh Forest Department, it offers eco-friendly adventures like treks and campfires in the Eastern Ghats, promising an unforgettable stay in nature.
+                  Jungle Star Eco Camp offers a unique island-like setting with seven cottages perched on a hillock,
+                  accessed only by a bridge. Crossing the hanging bridge is thrilling as it sways over the flowing river
+                  below. Surrounded by towering mountains, the camp provides stunning views. Managed by the Andhra
+                  Pradesh Forest Department, it offers eco-friendly adventures like treks and campfires in the Eastern
+                  Ghats, promising an unforgettable stay in nature.
                 </p>
+              </div>
+              <div class="card-footer d-flex justify-content-center bg-transparent">
+                <button mat-raised-button color="primary">View details</button>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-
     <!-- section for resorts -->
-    <section class="resorts-intro d-none">
+    <section class="resorts-gallery-location py-5">
       <div class="container">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <div class="card d-lg-flex">
-              <img src="assets/img/vanavihari_logo.png" class="card-img-top" alt="Card image cap" />
-
-              <div class="card-body">
-                <h5 class="card-title">Vanavihari, Maredumilli</h5>
-                <p class="card-text">
-                  Vanavihari resort, nestled in Maredumilli, is a haven for
-                  eco-tourism enthusiasts. This community-centric guesthouse
-                  offers a peaceful escape surrounded by nature. Providing cozy
-                  cottages and rooms, it sits within easy reach of Maredumilli
-                  Waterfalls, ensuring guests enjoy a tranquil environment.
-                  Delight in breakfast and dinner offerings, along with a
-                  relaxing stay at this charming retreat.
-                </p>
-                <!-- <a href="#" class="btn btn-primary">Action</a> -->
-                <button mat-raised-button color="primary">View details</button>
+        <h1 class="text-center mb-4">Vanavihari, Maredumilli</h1>
+        <div class="row">
+          <div class="col-md-8">
+            <h2 class="mb-3">Gallery</h2>
+            <div class="masonry-layout">
+              <!-- Loop through the image filenames array and generate HTML elements -->
+              <div *ngFor="let filename of imageFilenames" class="masonry-layout-item">
+                <!-- Use filename in the src attribute of the img tag -->
+                <img [src]="'assets/img/home-gallery/' + filename" [alt]="filename">
               </div>
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card d-lg-flex">
-              <img src="assets/img/vanavihari_logo.png" class="card-img-top" alt="Card image cap" />
-
-              <div class="card-body">
-                <h5 class="card-title">Vanavihari, Maredumilli</h5>
-                <p class="card-text">
-                  Vanavihari resort, nestled in Maredumilli, is a haven for
-                  eco-tourism enthusiasts. This community-centric guesthouse
-                  offers a peaceful escape surrounded by nature. Providing cozy
-                  cottages and rooms, it sits within easy reach of Maredumilli
-                  Waterfalls, ensuring guests enjoy a tranquil environment.
-                  Delight in breakfast and dinner offerings, along with a
-                  relaxing stay at this charming retreat.
-                </p>
-                <!-- <a href="#" class="btn btn-primary">Action</a> -->
-                <button mat-raised-button color="primary">View details</button>
-              </div>
-            </div>
+            <h2 class="mb-3">How to reach?</h2>
+            <address>
+              <i class="fa-solid fa-location-dot"></i>
+              Vanavihari Eco-tourism Complex, Maredumilli, AP-533295.
+            </address>
+            <section class="map-container">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15212.133581651236!2d81.712357!3d17.601149!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a373b5d52758873%3A0x718f2b2059db5e0a!2sVanavihari%20Maredumilli!5e0!3m2!1sen!2sin!4v1708738599849!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </section>
+            <section class="table-responsive">
+              <table class="table table-hover">
+                <thead>
+                  <tr>
+                    <th scope="col">From</th>
+                    <th scope="col">Distance</th>
+                    <th scope="col">Travel Time</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Rajahmundry Railway Station</td>
+                    <td>84 km</td>
+                    <td>2 hours</td>
+                  </tr>
+                  <tr>
+                    <td>Rajahmundry Airport</td>
+                    <td>69.7 km</td>
+                    <td>1.5 hours</td>
+                  </tr>
+                </tbody>
+              </table>
+            </section>
+            
           </div>
         </div>
       </div>
     </section>
-
     <!-- testimonials -->
     <section class="testimonials">
       <div class="container mt-5">
@@ -315,7 +337,6 @@
                 <footer class="blockquote-footer">Jane Smith</footer>
               </blockquote>
             </div>
-
             <!-- Add more carousel items as needed -->
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel"
