--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -33,6 +33,10 @@
   }
 }
 
+.about {
+  background-color: rgb(205, 240, 185);
+}
+
 .resort-intro {
   // .card {
   //   background-color: rgb(44, 16, 16);
@@ -49,4 +53,39 @@
 .modal-dialog {
   box-shadow: 0 1px 3px rgb(0, 128, 0);
 
+}
+
+// masonry layout
+.masonry-layout {
+  column-count: 3;
+  gap: 0.5em;
+}
+
+.masonry-layout-item {
+  display: inline-block;
+  // background: #eee;
+  margin: 0 0 0.5em;
+  width: 100%;
+  box-shadow: 0 0 3px 5px rgba(199, 199, 199, 0.699);
+
+  img {
+    border-radius: 5px;
+
+  }
+}
+
+.map-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+  /* Aspect ratio 16:9 */
+  height: 0;
+
+  iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+  }
 }
