routing for privacy-policy

--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -103,7 +103,7 @@
         <ul class="list-unstyled">
           <li><a class="text-decoration-none text-white" (click)="goToAboutUs()">About us</a></li>
           <li><a class="text-decoration-none text-white" href="#">Awards and News</a></li>
-          <li><a class="text-decoration-none text-white" href="#">Privacy Policy</a></li>
+          <li><a class="text-decoration-none text-white" (click)="goToPrivacy()">Privacy Policy</a></li>
           <li><a class="text-decoration-none text-white" (click)="goToTerms()">Terms and Conditions</a></li>
         </ul>
       </div>
