--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -309,6 +309,62 @@
         </div>
       </div>
     </section>
+
+    <section class="resorts-gallery-location py-5">
+      <div class="container">
+        <h1 class="text-center mb-4">Jungle Star, Valamuru</h1>
+        <div class="row">
+          <div class="col-md-8">
+            <h2 class="mb-3">Gallery</h2>
+            <div class="masonry-layout">
+              <!-- Loop through the image filenames array and generate HTML elements -->
+              <div *ngFor="let filename1 of imageFilenames1" class="masonry-layout-item">
+                <!-- Use filename in the src attribute of the img tag -->
+                <img [src]="'assets/img/home-gallery-junglestar/' + filename1" [alt]="filename1">
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <h2 class="mb-3">How to reach?</h2>
+            <address>
+              <i class="fa-solid fa-location-dot"></i>
+              Jungle Star ECO Camp, Valamuru, AP-533295.
+            </address>
+            <section class="map-container">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3802.321273036429!2d81.63047557463233!3d17.634936395627708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a3725b319b638ff%3A0x6497bd032f830606!2sJUNGLE%20STAR%20ECO%20CAMP!5e0!3m2!1sen!2sin!4v1708782328839!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </section>
+            <section class="table-responsive">
+              <table class="table table-hover">
+                <thead>
+                  <tr>
+                    <th scope="col">From</th>
+                    <th scope="col">Distance</th>
+                    <th scope="col">Travel Time</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Rajahmundry Railway Station</td>
+                    <td>94.7 km</td>
+                    <td>2 hours 24 minutes</td>
+                  </tr>
+                  <tr>
+                    <td>Rajahmundry Airport</td>
+                    <td>79.4 km</td>
+                    <td>1 hour 52 minutes</td>
+                  </tr>
+                </tbody>
+              </table>
+            </section>
+            
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+
+
     <!-- testimonials -->
     <section class="testimonials">
       <div class="container mt-5">
