travel time mention full

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -299,7 +299,7 @@
                   <tr>
                     <td>Rajahmundry Airport</td>
                     <td>69.7 km</td>
-                    <td>1.5 hours</td>
+                    <td>1 hour 30 minutes</td>
                   </tr>
                 </tbody>
               </table>
