resort-listing update

--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -102,7 +102,7 @@
         <h3>Links</h3><br>
         <ul class="list-unstyled">
           <li><a class="text-decoration-none text-white" (click)="goToAboutUs()">About us</a></li>
-          <li><a class="text-decoration-none text-white" href="#">Awards and News</a></li>
+          <li><a class="text-decoration-none text-white" (click)="goToAwards()">Awards and News</a></li>
           <li><a class="text-decoration-none text-white" (click)="goToPrivacy()">Privacy Policy</a></li>
           <li><a class="text-decoration-none text-white" (click)="goToTerms()">Terms and Conditions</a></li>
         </ul>
