--- a/src/app/modules/resort-listing/resort-listing.component.scss
+++ b/src/app/modules/resort-listing/resort-listing.component.scss
@@ -2,7 +2,10 @@
     background-image: url('/assets/img/jungle.jpeg');
     background-size: cover;
     background-position: center;
-    color: #fff;
+    background-attachment: fixed;
+    background-blend-mode: overlay;
+    background-color: rgba(0, 0, 0, 0.508);
+    color: white;
     text-align: center;
     padding: 200px 0;
   }
@@ -34,3 +37,17 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
           transition: transform 0.3s ease-in-out;
   }
+  .star-rating {
+    display: inline-block;
+    font-size: 1.5rem;
+    color: #ffd700; /* Set the color of the stars */
+}
+
+.star-rating::before {
+    content: '\2605\2605\2605\2605'; /* Unicode character for a solid star */
+}
+
+.star-rating::after {
+    content: '\2606'; /* Unicode character for an outlined star */
+    margin-left: 3px;
+}
