--- a/src/app/modules/settings/settings.component.html
+++ b/src/app/modules/settings/settings.component.html
@@ -8,7 +8,7 @@
                     <div class="col-md-3">
                         <ul class="nav nav-tabs flex-column">
                             <li class="nav-item">
-                                <a class="nav-link active" id="personal-tab" data-bs-toggle="tab" href="#personal">Personal Details</a>
+                                <a class="nav-link active" id="personal-tab" data-bs-toggle="tab" href="#personals">Personal Details</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" id="security-tab" data-bs-toggle="tab" href="#security">Security</a>
@@ -20,48 +20,186 @@
                     </div>
                     <div class="col-md-9">
                         <div class="tab-content mt-4">
-                            <div class="tab-pane fade show active" id="personal">
+                            <div class="tab-pane fade show active" id="personals">
                                 <h2>Personal Details</h2>
-                                <form>
-                                    <div class="mb-3">
-                                        <label for="fullName" class="form-label">Full Name:</label>
-                                        <input type="text" class="form-control" id="fullName" name="fullName" required>
+                                <form [formGroup]="form" (ngSubmit)="onSubmit()">
+                                   
+                                    <div class="row">
+                                        <div class="col-6">
+                                          <mat-form-field appearance="outline">
+                                            <mat-label>Name</mat-label>
+                                            <input matInput type="text" formControlName="name" placeholder="Enter your name" required>
+                                          </mat-form-field>
+                                        </div>
+                                        </div>
+                                        <br>
+                                        <div class="row">
+                                      
+                                        <div class="col-6">
+                                          <mat-form-field appearance="outline">
+                                            <mat-label>Mobile No</mat-label>
+                                            <input matInput type="tel" formControlName="mobileNo" placeholder="Enter your mobile number" required>
+                                          </mat-form-field>
+                                        </div>
                                     </div>
-        
-                                    <div class="mb-3">
-                                        <label for="email" class="form-label">Email:</label>
-                                        <input type="email" class="form-control" id="email" name="email" required>
+                                    <br>
+                                        <div class="row">
+                                        <div class="col-6">
+                                          <mat-form-field appearance="outline">
+                                            <mat-label>Email</mat-label>
+                                            <input matInput type="email" formControlName="email" placeholder="Enter your email" required>
+                                          </mat-form-field>
+                                        </div>
                                     </div>
-        
-                                    <button type="submit" class="btn btn-primary">Update Personal Details</button>
-                                </form>
+                                    <br>
+                                        <div class="row">
+                                        <div class="col-6">
+                                          <mat-form-field appearance="outline">
+                                            <mat-label>Password</mat-label>
+                                            <input matInput type="password" formControlName="password" placeholder="Enter your password" required>
+                                          </mat-form-field>
+                                        </div>
+                                      </div>
+                                
+                                      
+                                      
+                                      
+            
+                                      
+                                    <!-- <mat-form-field appearance="outline" class="col-md-3">
+                                      <mat-label>Full Name</mat-label>
+                                      <input type="text" formControlName="name" matInput required placeholder="Enter full name">
+                                    </mat-form-field>
+                                    <mat-form-field appearance="outline" class="col-md-3">
+                                        <mat-label>Mobile no.</mat-label>
+                                        <input type="tel" formControlName="mobile_number" matInput required placeholder="Enter 10 digit mobile no.">
+                                      </mat-form-field>
+                                      <mat-form-field appearance="outline" class="col-md-4">
+                                        <mat-label>Email Id</mat-label>
+                                        <input type="email" formControlName="email" matInput required placeholder="Enter valid email address">
+                                      </mat-form-field>
+                                    <mat-form-field appearance="outline" class="col-md-4">
+                                      <mat-label>Password</mat-label>
+                                      <input type="password" matInput placeholder="Enter Password" formControlName="password">
+                                      
+                                    </mat-form-field>
+                                    <mat-checkbox value="" color="primary" class="my-2">Remember password</mat-checkbox> -->
+                                    <!-- <div class="d-flex align-items-center">
+                                            <span class="lgcaptcha-area" id="captcha"></span>
+                                            <a href="javascript:;" (click)="createCaptcha()" class="lgcaptcha-refresh" aria-label="refresh captcha">
+                                                <img class="icon" src="assets/images/icons/refresh.svg"></a>
+                                        </div> -->
+                                    <!-- <div class="form-floating mb-3">
+                                          <input type="text" class="form-control" id="floatingInput" formControlName="cpatchaTextBox" id="cpatchaTextBox"
+                                          maxlength="6" placeholder="Enter Captcha as shown above">
+                                          <label for="floatingInput">Captcha</label>
+                                      </div> -->
+                                    <!-- <div class="error mt-2"> -->
+                                    <!-- <div *ngIf="(formGroup.controls['cpatchaTextBox'].touched && formGroup.get('cpatchaTextBox').hasError('required')) && !(validCaptchaError && !captchaError) ">
+                                              {{ errors.captcharequired | languageTranslatorImpure}}
+                                          </div>
+                                          <div *ngIf="validCaptchaError && !captchaError">{{'Please enter Valid captcha' | languageTranslatorImpure}}
+                                          </div> -->
+                                    <!-- </div> -->
+                                    <!-- <button mat-raised-button color="primary" (click)="goToSignin()" class="w-100 mt-1">Sign In</button> -->
+                                    <!-- <a (click)="register()">Register here</a> -->
+                                  </form>
                             </div>
         
                             <div class="tab-pane fade" id="security">
                                 <h2>Security</h2>
-                                <form>
-                                    <div class="mb-3">
-                                        <label for="currentPassword" class="form-label">Current Password:</label>
-                                        <input type="password" class="form-control" id="currentPassword" name="currentPassword" required>
+                                <form [formGroup]="form" (ngSubmit)="onSubmit()">
+                                    <div class="row">
+                                        <div class="col-6">
+                                    <mat-form-field appearance="outline" class="mt-4">
+                                      <mat-label>Current Password</mat-label>
+                                      <input type="password" formControlName="password" matInput required placeholder="Enter current password">
+                                    </mat-form-field>
                                     </div>
-        
-                                    <div class="mb-3">
-                                        <label for="newPassword" class="form-label">New Password:</label>
-                                        <input type="password" class="form-control" id="newPassword" name="newPassword" required>
                                     </div>
-        
-                                    <div class="mb-3">
-                                        <label for="confirmPassword" class="form-label">Confirm Password:</label>
-                                        <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" required>
-                                    </div>
-        
-                                    <button type="submit" class="btn btn-success">Change Password</button>
-                                </form>
+                                    <div class="row">
+                                        <div class="col-6">
+                                    <mat-form-field appearance="outline" class="mt-4">
+                                        <mat-label>New Password</mat-label>
+                                        <input type="password" formControlName="password" matInput required placeholder="Enter new password">
+                                      </mat-form-field>
+                                      </div>
+                                      </div>
+                                      <div class="row">
+                                        <div class="col-6">
+                                      <mat-form-field appearance="outline" class="mt-4">
+                                        <mat-label>Confirm Password</mat-label>
+                                        <input type="password" formControlName="password" matInput required placeholder="Enter confirm password">
+                                      </mat-form-field>
+                                      </div>
+                                      </div>
+                                   
+                
+                                    <!-- <div class="d-flex align-items-center">
+                                            <span class="lgcaptcha-area" id="captcha"></span>
+                                            <a href="javascript:;" (click)="createCaptcha()" class="lgcaptcha-refresh" aria-label="refresh captcha">
+                                                <img class="icon" src="assets/images/icons/refresh.svg"></a>
+                                        </div> -->
+                                    <!-- <div class="form-floating mb-3">
+                                          <input type="text" class="form-control" id="floatingInput" formControlName="cpatchaTextBox" id="cpatchaTextBox"
+                                          maxlength="6" placeholder="Enter Captcha as shown above">
+                                          <label for="floatingInput">Captcha</label>
+                                      </div> -->
+                                    <!-- <div class="error mt-2"> -->
+                                    <!-- <div *ngIf="(formGroup.controls['cpatchaTextBox'].touched && formGroup.get('cpatchaTextBox').hasError('required')) && !(validCaptchaError && !captchaError) ">
+                                              {{ errors.captcharequired | languageTranslatorImpure}}
+                                          </div>
+                                          <div *ngIf="validCaptchaError && !captchaError">{{'Please enter Valid captcha' | languageTranslatorImpure}}
+                                          </div> -->
+                                    <!-- </div> -->
+                                 <!-- <button mat-raised-button color="primary" (click)="goToSignin()" class="w-100 mt-1">Change Password</button> -->
+                                    <!-- <a (click)="register()">Register here</a> -->
+                                  </form>
                             </div>
         
                             <div class="tab-pane fade" id="payment">
                                 <h2>Payment Details</h2>
-                                <form>
+                                <form [formGroup]="form" (ngSubmit)="onSubmit()">
+                                    <div class="row">
+                                        <div class="col-6">
+                                    <mat-form-field appearance="outline" class="mt-3" >
+                                      <mat-label>Card Number</mat-label>
+                                      <input type="text" formControlName="cardNumber" matInput required placeholder="Enter card number">
+                                    </mat-form-field>
+                                    </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-6">
+                                    <mat-form-field appearance="outline" class="mt-3">
+                                        <mat-label>ExpiryDate</mat-label>
+                                        <input type="date" formControlName="expiryDate" matInput required placeholder="MM/YYYY">
+                                      </mat-form-field>
+                                      </div>
+                                      </div>
+                                      
+                                   
+                
+                                    <!-- <div class="d-flex align-items-center">
+                                            <span class="lgcaptcha-area" id="captcha"></span>
+                                            <a href="javascript:;" (click)="createCaptcha()" class="lgcaptcha-refresh" aria-label="refresh captcha">
+                                                <img class="icon" src="assets/images/icons/refresh.svg"></a>
+                                        </div> -->
+                                    <!-- <div class="form-floating mb-3">
+                                          <input type="text" class="form-control" id="floatingInput" formControlName="cpatchaTextBox" id="cpatchaTextBox"
+                                          maxlength="6" placeholder="Enter Captcha as shown above">
+                                          <label for="floatingInput">Captcha</label>
+                                      </div> -->
+                                    <!-- <div class="error mt-2"> -->
+                                    <!-- <div *ngIf="(formGroup.controls['cpatchaTextBox'].touched && formGroup.get('cpatchaTextBox').hasError('required')) && !(validCaptchaError && !captchaError) ">
+                                              {{ errors.captcharequired | languageTranslatorImpure}}
+                                          </div>
+                                          <div *ngIf="validCaptchaError && !captchaError">{{'Please enter Valid captcha' | languageTranslatorImpure}}
+                                          </div> -->
+                                    <!-- </div> -->
+                                 <!-- <button mat-raised-button color="primary" (click)="goToSignin()" class="w-100 mt-1">Update Payment Details</button> -->
+                                    <!-- <a (click)="register()">Register here</a> -->
+                                  </form>
+                                <!-- <form>
                                     <div class="mb-3">
                                         <label for="cardNumber" class="form-label">Card Number:</label>
                                         <input type="text" class="form-control" id="cardNumber" name="cardNumber" required>
@@ -73,7 +211,7 @@
                                     </div>
         
                                     <button type="submit" class="btn btn-primary">Update Payment Details</button>
-                                </form>
+                                </form> -->
                             </div>
                         </div>
                     </div>
