--- a/src/app/modules/resort-listing/resort-listing.component.scss
+++ b/src/app/modules/resort-listing/resort-listing.component.scss
@@ -1,5 +1,9 @@
+/* styles.css */
+
+@import '~@fortawesome/fontawesome-free/css/all.css';
+
 .hero-section {
-    background-image: url('/assets/img/jungle.jpeg');
+    background-image: url('/assets/img/Vanavihari-2.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -40,14 +44,44 @@
   .star-rating {
     display: inline-block;
     font-size: 1.5rem;
-    color: #ffd700; /* Set the color of the stars */
+    color: #ffd700;
 }
 
 .star-rating::before {
-    content: '\2605\2605\2605\2605'; /* Unicode character for a solid star */
+    content: '\2605\2605\2605\2605'; 
 }
 
 .star-rating::after {
-    content: '\2606'; /* Unicode character for an outlined star */
+    content: '\2606'; 
     margin-left: 3px;
+}
+
+.sidebar {
+  background-color: #fff;
+  padding: 20px;
+  color:#333;
+  height: 100vh; 
+  width: 100%;
+  position: fixed;
+  top: 35px;
+  left: 0;
+  z-index: 1;
+  overflow-x: hidden;
+  transition: 0.5s;
+}
+
+.close-button {
+  font-size: 35px;
+  color: #333;
+  background: none;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.main {
+  margin-left: 0;
+  transition: margin-left 0.5s;
 }
