--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -27,7 +27,8 @@
         <li class="nav-item" *ngIf="!isLoggedIn()">
           <a class="nav-link" routerLink="/sign-in" routerLinkActive="active" ariaCurrentWhenActive="page">Sign In</a>
         </li>
-        <li class="nav-item dropdown" *ngIf="isLoggedIn()">
+        <!-- *ngIf="isLoggedIn()" -->
+        <li class="nav-item dropdown" >
           <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">My Account</a>
           <div class="dropdown-menu position-absolute" aria-labelledby="dropdownId">
