shared comp for resort search

--- a/src/app/modules/resort-listing/resort-listing.component.html
+++ b/src/app/modules/resort-listing/resort-listing.component.html
@@ -17,7 +17,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="filter-options">
-                        <h3>Filter Options<i class="filter-icon fas fa-sliders-h" (click)="toggleSidebar()"></i></h3>
+                        <h3><span class="d-none">Filter Options</span><i class="filter-icon fas fa-sliders-h" (click)="toggleSidebar()"></i></h3>
                         <div id="sidebar" class="sidebar" *ngIf="isSidebarOpen">
                             <button class="close-button" (click)="closeSidebar()">&times;</button>
                             <h3>Cottage Type</h3><br>
