--- a/src/app/modules/tribal-community/tribal-community.component.html
+++ b/src/app/modules/tribal-community/tribal-community.component.html
@@ -3,7 +3,7 @@
         <section class="tribal-community my-5 py-5a">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8">
+                    <div class="col-lg-8 mt-5">
                         <h2>Tribal Community</h2>
                         <!-- masonry gallery static 10 images-->
                         <div class="grid-wrapper">
@@ -37,7 +37,7 @@
     
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 mt-5">
                         <h2>
                             <!-- Konda reddy tribals -->Konda Reddi
                         </h2>
