--- a/src/app/modules/resort-listing/resort-listing.component.html
+++ b/src/app/modules/resort-listing/resort-listing.component.html
@@ -57,7 +57,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8" *ngIf="!isSidebarOpen">
                     <div class="card mb-3 p-1">
                         <div class="row g-0">
                             <div class="col-md-4">
@@ -125,6 +125,7 @@
                             </div>
                         </div>
                     </div>
+                 
                 </div>
                 <div class="booking-summary-bar" *ngIf="showBookingSummary">
                     <div class="row">
